--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="inner-header glass-inner-header"> 
             <a href="index.html" class="glass-logo-link">
                 <div class="glass-logo-container">
-                    <img id="logo" src="images/4shlogo2.png" alt="Weledo liban 4 Shimota Logo">
+                    <img id="logo" src="images/logo2.png" alt="Weledo liban 4 Shimota Logo">
                     <!--<div class="logo-glow"></div> -->
                 </div>
             </a>	 
@@ -133,4 +133,5 @@
     <!--end wrapper-->
 	<script src="JS/script.js"></script>
 </body>
+
 </html>
