--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 <div class="social-overlay"></div>
             </a></li>
             <li><a href="" class="glass-social-icon">
-                <img src="images/x-logo.jpg" alt="X-News">
+                <img src="images/x-logo.jpg" alt="X-news">
                 <div class="social-overlay"></div>
             </a></li>
         </ul>
@@ -157,4 +157,5 @@
     <!--end wrapper-->
 	<script src="JS/script.js"></script>
 </body>
+
 </html>
