Fix HTML encoding issues in simon.html
File name changed.

--- a/pages/simon.html
+++ b/pages/simon.html
@@ -23,7 +23,7 @@
   <header>
     <div class="inner-header">
       <a href="../index.html">
-        <img id="logo" src="../images/4shlogo1.png" alt="Logo" />
+        <img id="logo" src="../images/logo2.png" alt="Liban Logo" />
       </a>
     </div>
 
@@ -130,3 +130,4 @@
   <script src="../JS/simon.js"></script>
 </body>
 </html>
+
