--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 <div class="social-overlay"></div>
             </a></li>
             <li><a href="" class="glass-social-icon">
-                <img src="images/x-logo.jpg" alt="X-news">
+                <img src="images/xlogo.jpg" alt="X-news">
                 <div class="social-overlay"></div>
             </a></li>
         </ul>
@@ -155,8 +155,9 @@
 </footer>
     </div> 
     <!--end wrapper-->
-	<script src="JS/script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
+
 
