Refactor simon.html structure and image paths
Updated the HTML structure and fixed image source paths.

--- a/pages/simon.html
+++ b/pages/simon.html
@@ -17,7 +17,7 @@
     <li><a href=""><img src="../images/TikTok.jpg" alt="TikTok"></a></li>
     <li><a href=""><img src="../images/instagram.jpg" alt="instagram"></a></li>
     <li><a href=""><img src="../images/youtube.jpg" alt="YouTube"></a></li>
-    <li><a href=""><img src="../images/x-logo.jpg" alt="X-News"></a></li>
+    <li><a href=""><img src="../images/xlogo.jpg" alt="X-News"></a></li>
   </ul>
 
   <header>
@@ -127,7 +127,8 @@
   </div>
 
   <!-- IMPORTANT: simon.html is inside /pages, so go up one level -->
-  <script src="../JS/simon.js"></script>
+  <script src="../js/simon.js"></script>
 </body>
 </html>
+
 
