Fix HTML formatting and structure in about.html
File name changed.

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         <div class="inner-header glass-inner-header"> 
             <a href="index.html" class="glass-logo-link">
                 <div class="glass-logo-container">
-                    <img id="logo" src="images/4shlogo2.png" alt="Liban Logo">
+                    <img id="logo" src="images/logo2.png" alt="Liban Logo">
                     <!--<div class="logo-glow"></div> -->
                 </div>
             </a>	 
@@ -159,5 +159,6 @@
 </body>
 
 </html>
+
 
 
