--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <div class="social-overlay"></div>
             </a></li>
             <li><a href="" class="glass-social-icon">
-                <img src="images/x-logo.jpg" alt="X-News">
+                <img src="images/xlogo.jpg" alt="X-News">
                 <div class="social-overlay"></div>
             </a></li>
         </ul>
@@ -48,7 +48,7 @@
         <div class="inner-header glass-inner-header"> 
             <a href="index.html" class="glass-logo-link">
                 <div class="glass-logo-container">
-                    <img id="logo" src="images/4shlogo2.png" alt="Weledo liban 4 Shimota Logo">
+                    <img id="logo" src="images/logo2.png" alt="Liban Logo">
                 </div>
             </a>	 
         </div>  
@@ -267,6 +267,7 @@
     </div>
     
     <!-- JavaScript for Interactive Effects -->
-    <script src="JS/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
+
 </html>
