--- a/pages/tabot.html
+++ b/pages/tabot.html
@@ -23,7 +23,7 @@
   <header>
     <div class="inner-header">
       <a href="../index.html">
-        <img id="logo" src="../images/4shlogo.png" alt="Logo" />
+        <img id="logo" src="../images/logo2.png" alt="Liban Logo" />
       </a>
     </div>
 
@@ -130,4 +130,5 @@
   <script src="../js/simon.js"></script>
 </body>
 </html>
+
 
